--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>Happy Birthday!!! :)</title>
+  <title>Happy Anniversary!!! :)</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/soobin.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -26,21 +26,20 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Irene</span>
+                Hế lô
+                <span id="name">Thủy Lammmmmmmmmmmmmm</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">I really love youuuuuu!!!!!!!!!!!</p>
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>It's our Anniversary!! :D</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
-                </p>
+                    "Vậy là đã một năm trôi qua kể từ khi chúng mình chính thức nắm tay nhau. Từng khoảnh khắc bên em là từng trang ký ức ngọt ngào mà anh luôn trân trọng. Một năm qua, mình đã trải qua đủ cung bậc cảm xúc - từ niềm vui, nụ cười đến những lúc giận hờn, hiểu lầm. Nhưng sau tất cả, anh vẫn luôn cảm nhận rõ tình yêu và sự gắn bó của chúng ta. Cảm ơn em vì đã ở bên anh, vì đã cùng anh xây dựng từng kỷ niệm đẹp đẽ này. Mong rằng chúng ta sẽ còn cùng nhau đi qua nhiều năm nữa, cùng yêu thương và trân trọng nhau như những ngày đầu. Yêu em nhiều lắm."                </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
@@ -65,11 +64,11 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="img/hat.svg" alt="hat" class="hat" />
+            <img src="./img/lamm.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="img/tym.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h3 class="wish-hbd">Happy anniversary!!!!!! </h3>
+                <h5 id="wishText">May i always be with you! ;)</h5>
             </div>
         </div>
 
@@ -142,8 +141,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>Hjhjhjhj!!</p>
+            <p id="replay">Click phát lữa là xem lại nè!!!!</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
